# fluton-contracts-refined

./: .env.example  .gitignore  .gitmodules  foundry.toml  hardhat.config.ts  package-lock.json  package.json
config/: tokens.ts  union.ts
contracts/: BridgeParams.sol  BridgeTest.sol  BridgeTestInterface.sol  BridgeTestMessenger.sol  Lock.sol
contracts/cosmos/: Cargo.toml  NOTICE
contracts/cosmos/src/: contract.rs  ibc.rs  lib.rs  msg.rs  state.rs
contracts/evm/: Bridge.sol  BridgeTest.sol  BridgeTestInterface.sol
contracts/evm/union/clients/: CosmosInCosmosClient.sol
contracts/evm/union/lib/: ICS23.sol
contracts/union/: Multicall.sol
contracts/union/apps/: Base.sol
contracts/union/clients/: CometblsClient.sol  CometblsClientV2.sol  CosmosInCosmosClient.sol  ICS23MembershipVerifier.sol  Verifier.sol
contracts/union/core/: OwnableIBCHandler.sol  Types.sol
contracts/union/core/02-client/: IBCClient.sol  IIBCClient.sol  ILightClient.sol
contracts/union/core/03-connection/: IBCConnection.sol  IIBCConnection.sol
contracts/union/core/04-channel/: IBCChannel.sol  IBCPacket.sol  IIBCChannel.sol  IIBCPacket.sol
contracts/union/lib/: Common.sol  Hex.sol  ICS23.sol  UnionICS23.sol
ignition/deployments/chain-11155111/: deployed_addresses.json
ignition/deployments/chain-421614/: deployed_addresses.json
ignition/deployments/chain-534351/: deployed_addresses.json
ignition/modules/: BridgeTest.ts
scripts/: deploy.ts  openChannel.ts
scripts/private/: _deploy.ts  _openChannel.ts
tasks/: deploy.ts  index.ts  openChannel.ts  setup.ts
test/: Lock.ts
(+17 files in other folders)
