[package]
name = "cosmwasm_test"
version = "0.1.0"
authors = ["cozfuttu <canozfuttu07@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.5.3", default-features = false }
cosmwasm-std    = { version = "1.5.3", default-features = false,   features = ["stargate"] }
cw-storage-plus = { version = "1.2.0", default-features = false }
ethabi          = { version = "18.0.0", default-features = false }
serde           = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror       = { version = "1.0.57" }